partly add farsi ver to pubs page; fix alignment of vlog page

--- a/style.css
+++ b/style.css
@@ -419,5 +419,7 @@ h1 {
 	text-align: left;
   }
 
-
+h2 {
+	text-align: left;
+  }
 
